--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,13 +4,13 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: -apple-system, BlinkMacSystemFont, Roboto, sans-serif;
+        font-family: "Comic Sans MS", "Comic Sans", cursive;
         font-size: small;
     }
 
 .grid-container {
     display: grid;
-    grid-template-rows: 10vh 10vh 10vh 10vh 10vh 50vh;
+    grid-template-rows: 12vh 12vh 12vh 12vh 12vh 70vh;
 }
 
 .grid-item1 {
@@ -102,7 +102,7 @@ a {
 
 .iphone {
   width: auto;
-  height: 100%;
+  height: 80%;
 }
 
 #text1 {
