--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 .grid-item1 {
-    background-color: rgba(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
