--- a/css/loding.css
+++ b/css/loding.css
@@ -5,6 +5,9 @@
 body {
     background-image: url(images/bg.png);
     background-size: cover;
+    
+    overflow: hidden; /* Hide scrollbars */
+      
 }
 
 .ebola {
