--- a/css/loding.css
+++ b/css/loding.css
@@ -18,9 +18,13 @@ body {
     margin-left: 53.25%;
     color: rgb(198, 198, 198);
     background-color:#323232;
+    position: absolute;
+    bottom: 280px;
+    right: 670px;
 }
 
 .gifs1 {
+    position: relative;
     display: inline-block;
     padding-bottom: 64px;
 }
@@ -33,4 +37,11 @@ button{
   img {
     position: relative;
     width: 100%;
+  }
+
+  #close {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 0;
   }
