--- a/css/loding.css
+++ b/css/loding.css
@@ -40,8 +40,15 @@ button{
   }
 
   #close {
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     position: absolute;
     right: 0;
+    transform: scale(1);
+    transition: transform 0.5s;
   }
+
+  #close:hover {
+    transform: scale(1.2);
+  }
+ 
