--- a/css/style.css
+++ b/css/style.css
@@ -154,3 +154,32 @@ a {
   height: 183px;
   width: auto;
 }
+
+#button {
+  background-image: url(../images/poes.png);
+  background-color: #ffffff;
+  background-repeat: no-repeat;
+  margin-left: 32%;
+  color: #f700ff;
+  font-size: 30px;
+  padding: 10px 20px;
+  border-radius: 0;
+  border: none;
+  box-shadow: none;
+  animation: blink 1s linear infinite;
+  z-index: 1000;
+  height: 800px;
+  width: 100%;
+}
+
+#button:active {
+  opacity: 0%;
+}
+
+.button {
+  transform: scale(1);
+  transition: transform 0.5s;
+}
+.button:hover {
+  transform: scale(1.2);
+}
