--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,13 @@ a {
   grid-row-end: 8;
 }
 
+.grid-item11  {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start: 2;
+  grid-row-end: 7;
+}
+
 .iphone {
   width: auto;
   height: 100%;
@@ -185,4 +192,11 @@ video {
 }
 .button:hover {
   transform: scale(1.2);
+}
+
+.phonemp4 {
+  position: relative;
+  margin-bottom: -495px;
+  height: 427px;
+  margin-left: 30px;
 }
