--- a/css/loding.css
+++ b/css/loding.css
@@ -26,7 +26,19 @@ body {
 .gifs1 {
     position: relative;
     display: inline-block;
-    padding-bottom: 64px;
+}
+
+.img-small{
+  width: 50px;
+  height: 50px;
+}
+.img-medium{
+  width: 200px;
+  height: 200px;
+}
+.img-large{
+  width: 400px;
+  height: 400px;
 }
 
 button{
