--- a/css/loding.css
+++ b/css/loding.css
@@ -4,7 +4,7 @@
 
 body {
     background-image: url(../images/bg.png);
-    background-size: cover;
+    background-size: 1490px;
     
     overflow: hidden; /* Hide scrollbars */
       
