--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ video {
 
 .phonemp4 {
   position: relative;
-  margin-bottom: -495px;
-  height: 427px;
-  margin-left: 30px;
+  margin-bottom: -33vw;
+  height: 58vh;
+  margin-left: 2vw;
 }
